--- a/css/styles.css
+++ b/css/styles.css
@@ -8,9 +8,12 @@
 }
 
 html {
-  overflow-y: hidden;
-  overflow-x: scroll;
   background: #c9c9c9;
+  overflow: hidden;
+}
+
+body {
+  overflow: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -23,16 +26,15 @@ html {
 
 ::-webkit-scrollbar-track {
   background: #c9c9c9;
-  border-top: 2px solid black;
 }
 
 #header {
   z-index: 100;
   background: #c9c9c9;
-  width: calc(100vh - 14px);
+  width: 100vh;
   height: 80px;
   position: fixed;
-  top: calc(100vh - 14px);
+  top: 100vh;
   left: 0;
   border-bottom: 2px solid black;
   -webkit-transform: rotate(-90deg);
@@ -80,26 +82,24 @@ html {
 }
 
 #pageWrap {
-  height: calc(100vh - 14px - 80px);
-  width: auto;
-  margin: 40px 0 40px 120px;
+  height: calc(100vw - 80px);
+  width: 100vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+  -webkit-transform: rotate(-90deg) translateX(-100vh) translateY(80px);
+          transform: rotate(-90deg) translateX(-100vh) translateY(80px);
+  -webkit-transform-origin: left top;
+          transform-origin: left top;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-#pageWrap h1 {
-  position: absolute;
-  font-size: 12vh;
-  width: calc(100vh - 14px - 80px);
-  -webkit-transform: rotate(-90deg);
-          transform: rotate(-90deg);
-  -webkit-transform-origin: top left;
-          transform-origin: top left;
-  top: calc(100vh - 14px - 40px);
-  padding: 40px 0;
-  line-height: 1;
-}
-
-#pageWrap #projects {
-  height: calc(100vh - 14px - 80px);
+#pageWrap #content {
+  height: 100vh;
+  -webkit-transform: rotate(90deg) translateY(-100vh);
+          transform: rotate(90deg) translateY(-100vh);
+  -webkit-transform-origin: left top;
+          transform-origin: left top;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -107,12 +107,40 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  margin-left: calc(24vh + 120px);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 40px;
+  width: auto;
 }
 
-#pageWrap #projects img {
+#pageWrap #content h1 {
+  font-size: 12vh;
+  line-height: 1;
+  width: calc(100vh - 80px);
+  height: 24vh;
+  position: absolute;
+  -webkit-transform: rotate(-90deg) translateX(calc(-100vh + 80px));
+          transform: rotate(-90deg) translateX(calc(-100vh + 80px));
+  -webkit-transform-origin: left top;
+          transform-origin: left top;
+  padding-top: 40px;
+}
+
+#pageWrap #content #projects {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-left: calc(120px + 24vh);
+}
+
+#pageWrap #content #projects img {
   height: 100%;
   width: auto;
-  padding-right: 40px;
+  margin-right: 40px;
 }
 /*# sourceMappingURL=styles.css.map */
