--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,5 +1,4 @@
 $gray: #c9c9c9;
-$height: calc(100vh - 14px - 80px);
 * {
     font-family: pragmatica, sans-serif;
     font-weight: 400;
@@ -9,9 +8,11 @@ $height: calc(100vh - 14px - 80px);
     text-decoration: none;
 }
 html {
-    overflow-y: hidden;
-    overflow-x: scroll;
     background: $gray;
+    overflow: hidden;
+}
+body {
+    overflow: hidden;
 }
 ::-webkit-scrollbar {
     width: 14px;
@@ -21,15 +22,14 @@ html {
 }
 ::-webkit-scrollbar-track {
     background: $gray;
-    border-top: 2px solid black;
 }
 #header {
     z-index: 100;
     background: $gray;
-    width: calc(100vh - 14px);
+    width: 100vh;
     height: 80px;
     position: fixed;
-    top: calc(100vh - 14px);
+    top: 100vh;
     left: 0;
     border-bottom: 2px solid black;
     transform: rotate(-90deg);
@@ -54,28 +54,43 @@ html {
     }
 }
 #pageWrap {
-    height: $height;
-    width: auto;
-    margin: 40px 0 40px 120px;
-    h1 {
-        position: absolute;
-        font-size: 12vh;
-        width: $height;
-        transform: rotate(-90deg);
-        transform-origin: top left;
-        top: calc(100vh - 14px - 40px);
-        padding: 40px 0;
-        line-height: 1;
-    }
-    #projects {
-        height: $height;
+    height: calc(100vw - 80px);
+    width: 100vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+    transform: rotate(-90deg) translateX(-100vh) translateY(80px);
+    transform-origin: left top;
+    box-sizing: border-box;
+    #content {
+        height: 100vh;
+        transform: rotate(90deg) translateY(-100vh);
+        transform-origin: left top;
         display: flex;
         flex-direction: row;
-        margin-left: calc(24vh + 120px);
-        img {
-            height: 100%;
-            width: auto;
-            padding-right: 40px;
+        box-sizing: border-box;
+        padding: 40px;
+        width: auto;
+        h1 {
+            font-size: 12vh;
+            line-height: 1;
+            width: calc(100vh - 80px);
+            height: 24vh;
+            position: absolute;
+            transform: rotate(-90deg) translateX(calc(-100vh + 80px));
+            transform-origin: left top;
+            padding-top: 40px;
         }
+        #projects {
+            height: 100%;
+            display: flex;
+            flex-direction: row;
+            margin-left: calc(120px + 24vh);
+            img {
+                height: 100%;
+                width: auto;
+                margin-right: 40px;
+            }
+        }
+
     }
 }
