--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -1,4 +1,4 @@
-@media screen and (min-width: 800px) {
+@media screen and (max-width: 799.99px) {
     $gray: #c9c9c9;
     * {
         font-family: pragmatica, sans-serif;
@@ -10,9 +10,10 @@
     }
     html {
         background: $gray;
-        overflow-y: hidden;
+        overflow-x: hidden;
     }
     body {
+        overflow-x: hidden;
     }
     ::-webkit-scrollbar {
         width: 14px;
@@ -24,15 +25,12 @@
         background: $gray;
     }
     #wrap {
-        height: 100vw;
-        width: 100vh;
-        transform-origin: top left;
-        transform: rotate(-90deg) translateX(-100vh);
+        width: 100vw;
         #header {
-            z-index: 100;
-            width: 100vh;
+            width: 100vw;
             height: 80px;
             background: $gray;
+            z-index: 100;
             border-bottom: 2px solid black;
             display: flex;
             flex-direction: row;
@@ -40,6 +38,7 @@
             align-items: center;
             padding: 0 40px;
             box-sizing: border-box;
+            position: fixed;
             .logo {
                 font-size: 30px;
             }
@@ -54,35 +53,26 @@
             }
         }
         #pageWrap {
-            overflow-y: auto;
-            //overflow-x: hidden;
-            width: 100vh;
-            height: calc(100% - 80px);
-            position: absolute;
-            top: 80px;
+            width: 100vw;
             left: 0;
             padding: 40px;
             box-sizing: border-box;
             h1 {
                 font-size: 12vh;
                 line-height: 1;
-                padding: 40px 0 120px 0;
+                padding: 120px 0 40px 0;
             }
             #projects {
                 display: flex;
-                flex-direction: row;
+                flex-direction: column;
                 margin-top: 40px;
                 justify-content: flex-start;
                 align-items: center;
-                height: calc(100vh - 80px);
-                width: auto;
-                transform: rotate(90deg) translateX(-100vh);
-                transform-origin: bottom left;
-                margin-right: 100px;
+                width: 100%;
                 & > img {
-                    height: calc(100vh - 80px);
-                    width: auto;
-                    padding-right: 40px;
+                    width: calc(100vw - 80px);
+                    height: auto;
+                    padding-bottom: 40px;
                 }
             }
         }
