--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,8 +1,8 @@
 $text: #fff;
 $bg: #151515;
 * {
-    font-family: 'nimbus-sans', sans-serif;
-    font-weight: 400;
+    font-family: 'paralucent', sans-serif;
+    font-weight: 300;
     margin: 0;
     padding: 0;
     color: $text;
