--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 * {
-  font-family: 'nimbus-sans', sans-serif;
-  font-weight: 400;
+  font-family: 'paralucent', sans-serif;
+  font-weight: 300;
   margin: 0;
   padding: 0;
   color: #fff;
