--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
 * {
-  font-family: 'paralucent', sans-serif;
-  font-weight: 300;
+  font-family: 'pragmatica', sans-serif;
+  font-weight: 400;
   margin: 0;
   padding: 0;
-  color: #fff;
+  color: LightGrey;
   text-decoration: none;
 }
 
@@ -12,25 +12,49 @@ html {
   overflow: hidden;
 }
 
+body {
+  overflow: hidden;
+}
+
 ::-webkit-scrollbar {
   width: 14px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #fff;
+  background: LightGrey;
 }
 
 ::-webkit-scrollbar-track {
-  background: #151515;
+  background: #141414;
 }
 
+/**#cursor {
+    z-index: 1000;
+    position: fixed;
+    height: 20px;
+    width: 20px;
+    background: $text;
+    border-radius: 50%;
+    pointer-events: none;
+}
+#cursorFollower {
+    z-index: 900;
+    position: fixed;
+    height: 100px;
+    width: 100px;
+    background: $bg;
+    border-radius: 50%;
+    pointer-events: none;
+    transition-duration: 1s;
+    transition-timing-function: cubic-bezier(.08,.35,.16,1.02);
+}*/
 #header {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 100;
   width: 100%;
   height: 80px;
-  background: #151515;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -72,14 +96,14 @@ html {
 }
 
 #pageWrap {
-  overflow-y: auto;
   width: 100%;
   height: calc(100vh - 80px);
-  padding: 0 40px 40px 40px;
+  padding: 0 40px 80px 40px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  margin-top: 80px;
+  overflow-y: auto;
   scroll-behavior: smooth;
+  margin-top: 80px;
 }
 
 #pageWrap h1 {
@@ -100,6 +124,77 @@ html {
 #pageWrap #projects img {
   width: 100%;
   padding-bottom: 40px;
+}
+
+#pageWrap p {
+  font-size: 4em;
+  line-height: 1.25;
+  padding-bottom: 40px;
+}
+
+footer {
+  width: 100%;
+  text-align: center;
+  font-size: 16px;
+  opacity: .4;
+  padding: 14px 0;
+}
+
+#preload {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  z-index: 101;
+  background: #141414;
+  -webkit-transition-duration: 2s;
+          transition-duration: 2s;
+  top: 0;
+  left: 0;
+  -webkit-transform-origin: top;
+          transform-origin: top;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition-delay: .4s;
+          transition-delay: .4s;
+}
+
+#preload p {
+  font-size: 2em;
+  -webkit-transition-duration: .5s;
+          transition-duration: .5s;
+  -webkit-animation: pulse 3s ease-in-out infinite;
+          animation: pulse 3s ease-in-out infinite;
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: .5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes pulse {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: .5;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @media screen and (max-width: 1200px) {
@@ -123,6 +218,9 @@ html {
 }
 
 @media screen and (max-width: 650px) {
+  ::-webkit-scrollbar {
+    display: none;
+  }
   #header .logo {
     font-size: 26px;
   }
