--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,8 +1,8 @@
-$text: #fff;
-$bg: #151515;
+$text: LightGrey;
+$bg: rgb(20, 20, 20);
 * {
-    font-family: 'paralucent', sans-serif;
-    font-weight: 300;
+    font-family: 'pragmatica', sans-serif;
+    font-weight: 400;
     margin: 0;
     padding: 0;
     color: $text;
@@ -13,6 +13,7 @@ html {
     overflow: hidden;
 }
 body {
+    overflow: hidden;
 }
 ::-webkit-scrollbar {
     width: 14px;
@@ -23,13 +24,33 @@ body {
 ::-webkit-scrollbar-track {
     background: $bg;
 }
+/**#cursor {
+    z-index: 1000;
+    position: fixed;
+    height: 20px;
+    width: 20px;
+    background: $text;
+    border-radius: 50%;
+    pointer-events: none;
+}
+#cursorFollower {
+    z-index: 900;
+    position: fixed;
+    height: 100px;
+    width: 100px;
+    background: $bg;
+    border-radius: 50%;
+    pointer-events: none;
+    transition-duration: 1s;
+    transition-timing-function: cubic-bezier(.08,.35,.16,1.02);
+}*/
 #header {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 100;
     width: 100%;
     height: 80px;
-    background: $bg;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -50,13 +71,13 @@ body {
     }
 }
 #pageWrap {
-    overflow-y: auto;
     width: 100%;
     height: calc(100vh - 80px);
-    padding: 0 40px 40px 40px;
+    padding: 0 40px 80px 40px;
     box-sizing: border-box;
-    margin-top: 80px;
+    overflow-y: auto;
     scroll-behavior: smooth;
+    margin-top: 80px;
     h1 {
         font-size: 9em;
         text-align: center;
@@ -72,8 +93,44 @@ body {
             padding-bottom: 40px;
         }
     }
+    p {
+        font-size: 4em;
+        line-height: 1.25;
+        padding-bottom: 40px;
+    }
 }
-
+footer {
+    width: 100%;
+    text-align: center;
+    font-size: 16px;
+    opacity: .4;
+    padding: 14px 0;
+}
+#preload {
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    z-index: 101;
+    background: $bg;
+    transition-duration: 2s;
+    top: 0;
+    left: 0;
+    transform-origin: top;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition-delay: .4s;
+    p {
+        font-size: 2em;
+        transition-duration: .5s;
+        animation: pulse 3s ease-in-out infinite;
+    }
+    @keyframes pulse {
+        0% { opacity: 1; }
+        50% { opacity: .5; }
+        100% { opacity: 1; }
+    }
+}
 @media screen and (max-width: 1200px) {
     #pageWrap {
         h1 {
@@ -95,6 +152,9 @@ body {
     }
 }
 @media screen and (max-width: 650px) {
+    ::-webkit-scrollbar {
+        display: none;
+    }
     #header {
         .logo {
             font-size: 26px;
