--- a/css/styles.scss
+++ b/css/styles.scss
@@ -72,7 +72,7 @@ body {
 #pageWrap {
     width: 100%;
     height: calc(100vh - 80px);
-    padding: 0 40px 80px 40px;
+    padding: 0 40px 0 40px;
     box-sizing: border-box;
     overflow-y: auto;
     scroll-behavior: smooth;
