--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@ html {
 #pageWrap {
   width: 100%;
   height: calc(100vh - 80px);
-  padding: 0 40px 80px 40px;
+  padding: 0 40px 0 40px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   overflow-y: auto;
