--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,107 +1,1 @@
-@media screen and (max-width: 799.99px) {
-  * {
-    font-family: pragmatica, sans-serif;
-    font-weight: 400;
-    margin: 0;
-    padding: 0;
-    color: black;
-    text-decoration: none;
-  }
-  html {
-    background: #c9c9c9;
-    overflow-x: hidden;
-  }
-  body {
-    overflow-x: hidden;
-  }
-  ::-webkit-scrollbar {
-    width: 14px;
-  }
-  ::-webkit-scrollbar-thumb {
-    background: #000;
-  }
-  ::-webkit-scrollbar-track {
-    background: #c9c9c9;
-  }
-  #wrap {
-    width: 100vw;
-  }
-  #wrap #header {
-    width: 100vw;
-    height: 80px;
-    background: #c9c9c9;
-    z-index: 100;
-    border-bottom: 2px solid black;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    padding: 0 40px;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    position: fixed;
-  }
-  #wrap #header .logo {
-    font-size: 30px;
-  }
-  #wrap #header ul {
-    width: 160px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-  #wrap #header ul a {
-    font-size: 20px;
-  }
-  #wrap #pageWrap {
-    width: 100vw;
-    left: 0;
-    padding: 40px;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-  }
-  #wrap #pageWrap h1 {
-    font-size: 12vh;
-    line-height: 1;
-    padding: 120px 0 40px 0;
-  }
-  #wrap #pageWrap #projects {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    margin-top: 40px;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    width: 100%;
-  }
-  #wrap #pageWrap #projects > img {
-    width: calc(100vw - 80px);
-    height: auto;
-    padding-bottom: 40px;
-  }
-}
-/*# sourceMappingURL=mobile.css.map */
+/* No CSS *//*# sourceMappingURL=mobile.css.map */
