--- a/css/styles.css
+++ b/css/styles.css
@@ -56,11 +56,11 @@ html {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: LightGrey;
+  background: black;
 }
 
 ::-webkit-scrollbar-track {
-  background: #141414;
+  background: white;
 }
 
 #header {
@@ -83,7 +83,7 @@ html {
           align-items: center;
   height: 60px;
   width: 100%;
-  font-size: 20px;
+  font-size: 22px;
   padding: 0 25px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -98,9 +98,9 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 #header a {
@@ -128,8 +128,8 @@ html {
 }
 
 #pageWrap #projects {
-  height: 170vh;
-  width: 170vw;
+  height: 150vh;
+  width: 150vw;
   position: absolute;
   -webkit-transition-duration: .6s;
           transition-duration: .6s;
@@ -144,7 +144,7 @@ html {
 }
 
 #pageWrap #projects img {
-  height: 24vw;
+  height: 22vw;
   -webkit-transform-origin: center;
           transform-origin: center;
   -webkit-transition-duration: .5s;
@@ -159,17 +159,31 @@ html {
 }
 
 #about {
-  margin: 60px 25px;
+  padding: 150px 25px 0 25px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #about #desc {
   font-size: 6vw;
   line-height: 1.15;
-  color: #333;
+  color: black;
+  margin-bottom: -10vw;
 }
 
 #about #desc a {
-  color: #333;
+  color: black;
   -webkit-transition-duration: .3s;
           transition-duration: .3s;
   border-bottom: 4px solid white;
@@ -177,5 +191,24 @@ html {
 
 #about #desc a:hover {
   border-bottom: 4px solid #333;
+}
+
+#about #image {
+  height: 70vw;
+  width: calc(100% - 200px);
+  z-index: -1;
+  background-image: url("../img/joseph.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+#about #footer {
+  margin-top: 100px;
+  text-align: center;
+  font-size: 20px;
+  color: rgba(0, 0, 0, 0.75);
+  line-height: 1.25;
+  height: 40px;
 }
 /*# sourceMappingURL=styles.css.map */
