--- a/css/styles.scss
+++ b/css/styles.scss
@@ -44,10 +44,10 @@ body {
     width: 14px;
 }
 ::-webkit-scrollbar-thumb {
-    background: $text;
+    background: black;
 }
 ::-webkit-scrollbar-track {
-    background: $bg;
+    background: white;
 }
 #header {
     position: fixed;
@@ -60,14 +60,14 @@ body {
     align-items: center;
     height: 60px;
     width: 100%;
-    font-size: 20px;
+    font-size: 22px;
     padding: 0 25px;
     box-sizing: border-box;
     #links {
         width: 180px;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: flex-end;
     }
     a {
         border-bottom: 2px solid rgba(0,0,0,0);
@@ -84,8 +84,8 @@ body {
     justify-content: center;
     align-items: center;
     #projects {
-        height: 170vh;
-        width: 170vw;
+        height: 150vh;
+        width: 150vw;
         position: absolute;
         //border: 2px solid black;
         transition-duration: .6s;
@@ -94,7 +94,7 @@ body {
         grid-template-columns: 20% 20% 20% 20% 20%;
         grid-template-rows: 33% 33% 33%;
         img {
-            height: 24vw;
+            height: 22vw;
             transform-origin: center;
             transition-duration: .5s;
             transition-timing-function: ease-out;
@@ -107,18 +107,41 @@ body {
     }
 }
 #about {
-    margin: 60px 25px;
+    padding: 150px 25px 0 25px;
+    box-sizing: border-box;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     #desc {
         font-size: 6vw;
         line-height: 1.15;
-        color: #333;
+        color: black;
+        margin-bottom: -10vw;
         a {
-            color: #333;
+            color: black;
             transition-duration: .3s;
             border-bottom: 4px solid white;
             &:hover {
                 border-bottom: 4px solid #333;
             }
         }
+    }
+    #image {
+        height: 70vw;
+        width: calc(100% - 200px);
+        z-index: -1;
+        background-image: url('../img/joseph.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+    #footer {
+        margin-top: 100px;
+        text-align: center;
+        font-size: 20px;
+        color: rgba(0,0,0,0.75);
+        line-height: 1.25;
+        height: 40px;
     }
 }
